# rust-cloudflare-fullstack-starter

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  flake.nix  process-compose.yaml  wrangler.jsonc
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: main.rs
crates/frontend/src/api/: health.rs  mod.rs
crates/frontend/src/components/: nav_bar.rs
crates/frontend/src/components/ui/: button.rs  code_line.rs
crates/frontend/src/pages/: about.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  index.html  input.css
frontend/src/: main.rs
frontend/src/components/: mod.rs  nav_bar.rs
frontend/src/components/ui/: badge.rs  button.rs  code_line.rs  info_card.rs  mod.rs  spinner.rs  stack_card.rs  stack_row.rs
frontend/src/pages/: about.rs  home.rs  mod.rs  not_found.rs
nix/overlays/: worker-build.nix
shared/src/: health.rs  lib.rs
src/: lib.rs
worker/: Cargo.toml
worker/src/: lib.rs
