[package]
name = "worker-api"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
db = { path = "../db" }
worker = { version = "0.7.5", features = ["http", "tokio-postgres"] }
tokio-postgres = { version = "0.7", default-features = false, features = ["js"] }
wasm-bindgen-futures = "0.4"
axum = { version = "0.8", default-features = false, features = ["json"] }
tower-service = "0.3"
http-body-util = "0.1"
futures-util = "0.3"
console_error_panic_hook = "0.1.7"
